install: update deployment manifest

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -22,26 +22,28 @@ spec:
       volumes:
       #
       # You will need these two volumes if you want to establish validated TLS
-      # connections against Tiller
+      # connections against Tiller.
       #
-      # - name: helm-tls-ca
+      # - name: tiller-tls-ca
       #   configMap:
-      #     name: flux-helm-tls-ca-config
+      #     name: tiller-tls-ca-config
       #     defaultMode: 0600
-      # Secret type kubernetes.io/tls
-      # - name: flux-helm-tls-cert
+      #
+      # Secret of type `kubernetes.io/tls`:
+      #
+      # - name: tiller-tls-cert
       #   secret:
       #     secretName: tiller-tls-cert
       #     defaultMode: 0400
       #
-      # The following volume is for using a customised known_hosts file,
-      # which you will need to do if you host your own git repo rather
-      # than using github or the like. You'll also need to mount it
+      # The following volume is for using a customised `known_hosts` file,
+      # which you will need to do if you host your own git repository rather
+      # than using GitHub or the like. You will also need to mount it
       # into the container, below.
       #
-      # You may also wish to provide an ssh_config file,
-      # mentioning more than one `IdentityFile`; for instance, if you're
-      # using more than one GitHub repo. NB the entry key should be
+      # You may also wish to provide an `ssh_config` file,
+      # mentioning more than one `IdentityFile`; for instance, if you are
+      # using more than one GitHub repository. NB: the entry key should be
       # "config" rather than "ssh_config" if mounted in ~/.ssh/.
       #
       # - name: sshdir
@@ -49,12 +51,12 @@ spec:
       #     name: flux-ssh-config
       #     defaultMode: 0400
       #
-      # You will need this volume if you're using a git repo that
+      # You will need this volume if you are using a git repository that
       # needs an SSH key for access; e.g., a GitHub deploy key. If
-      # you're using just one such repo, the default ssh_config
-      # already points at /etc/fluxd/ssh/identity as a key. If you
-      # want to use more than one key, you'll need to provide your own
-      # ssh_config above, with an `IdentityFile` entry matching each
+      # you are using just one such repository, the default `ssh_config`
+      # already points at `/etc/fluxd/ssh/identity` as a key. If you
+      # want to use more than one key, you will need to provide your own
+      # `ssh_config` above, with an `IdentityFile` entry matching each
       # key in the secret mentioned here.
       #
       # - name: git-key
@@ -62,20 +64,19 @@ spec:
       #     secretName: flux-git-deploy
       #     defaultMode: 0400 # when mounted read-only, we won't be able to chmod
       #
-      # These two volumes are for mounting a repositories.yaml file,
-      # and providing a cache directory. The latter is needed because
-      # mounting the former will make the cache/ directory read-only.
+      # You will need this volume to import any custom Helm repositories
+      # and their credentials and/or certificate configurations. You will also
+      # need to mount it into the container and set the `--helm-repository-import`
+      # argument, below.
       #
       # - name: repositories-yaml
       #   secret:
       #     secretName: flux-helm-repositories
-      # - name: repositories-cache
-      #   emptyDir: {}
-
+      #     defaultMode: 0400
       containers:
       - name: helm-operator
         # There are no ":latest" images for helm-operator. Find the most recent
-        # release or image version at https://hub.docker.com/r/weaveworks/helm-operator/tags
+        # release or image version at https://hub.docker.com/r/fluxcd/helm-operator/tags
         # and replace the tag here.
         image: docker.io/fluxcd/helm-operator:1.0.0-rc9
         imagePullPolicy: IfNotPresent
@@ -99,31 +100,59 @@ spec:
             cpu: 50m
             memory: 64Mi
         volumeMounts:
-        # Include this if you need to mount a customised known_hosts or ssh_config
-        # file; you'll also need the volume declared above.
+        #
+        # Include this if you need to mount a customised `known_hosts` or `ssh_config`
+        # file; you will also need the `sshdir` volume above.
+        #
         # - name: sshdir
         #   mountPath: /root/.ssh
         #   readOnly: true
+        #
+        # Include this if you are using a git repository that needs an SSH
+        # private key for access; you will also need the `git-key` volume above.
+        #
         # - name: git-key
         #   mountPath: /etc/fluxd/ssh
+        #
+        # Include this if you want to import any Helm repositories and their
+        # credentials and/or certificate configurations; you will also need the
+        # `repositories-yaml` volume above, and the `--helm-repository-import`
+        # argument below.
+        #
         # - name: repositories-yaml
-        #   mountPath: /var/fluxd/helm/repository
-        # - name: repositories-cache
-        #   mountPath: /var/fluxd/helm/repository/cache
-        # - name: helm-tls-certs
+        #   mountPath: /root/.helm/repository/repositories.yaml
+        #
+        # Include these if you want to establish validated TLS connections
+        # against Tiller; you will also need the `tiller-tls-cert` and
+        # `tiller-tls-ca` volumes declared above, and the `--tiller-tls-*`
+        # arguments below.
+        #
+        # - name: tiller-tls-cert
         #   mountPath: /etc/fluxd/helm
         #   readOnly: true
-        # - name: helm-tls-ca
+        # - name: tiller-tls-ca
         #   mountPath: /etc/fluxd/helm-ca
         #   readOnly: true
         args:
-        # How to find Tiller
+          # In what namespace Tiller can be found.
         - --tiller-namespace=kube-system
-        # Comment out to to establish validated TLS connections against Tiller
+        #
+        # Comment out to to establish validated TLS connections against Tiller.
+        #
         # - --tiller-tls-ca-cert-path=/etc/fluxd/helm-ca/ca.crt
         # - --tiller-tls-enable=true
         # - --tiller-tls-key-path=/etc/fluxd/helm/tls.key
         # - --tiller-tls-cert-path=/etc/fluxd/helm/tls.crt
         # - --tiller-tls-verify=true
         # - --tiller-tls-ca-cert-path=/etc/fluxd/helm-ca/ca.crt
-
+        #
+        # Include this if you want to import any Helm repositories and their
+        # credential and/or certificate configurations; you will also need the
+        # `repositories-yaml` volume and volume mount, above.
+        #
+        # - --helm-repository-import=v2:/root/.helm/repository/repositories.yaml,v3:/root/.helm/repository/repositories.yaml
+        #
+        # Comment out to enable a single Helm version that can be targeted
+        # by a `HelmRelease`; defaults to `--enabled-helm-versions=v2,v3`.
+        #
+        # - --enabled-helm-versions=v3
