--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,3 @@
-sphinx                 == 2.1.2
-sphinx_markdown_tables == 0.0.9
-recommonmark           == 0.5.0
+sphinx                 == 2.4.3
+sphinx-markdown-tables == 0.0.12
+recommonmark           == 0.6.0
