--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,4 @@
-sphinx                 == 2.4.3
-sphinx-markdown-tables == 0.0.12
-recommonmark           == 0.6.0
+mkdocs                  == 1.1
+mkdocs-material         == 4.6.3
+mkdocs-redirects
+pymdown-extensions      == 6.3.0
