--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,7 @@ nav:
   - References:
     - Operator reference: references/operator.md
     - HelmRelease Custom Resource: references/helmrelease-custom-resource.md
-  - HelmRelase guide:
+  - HelmRelease guide:
     - Introduction: helmrelease-guide/introduction.md
     - Chart sources: helmrelease-guide/chart-sources.md
     - Values: helmrelease-guide/values.md
