--- a/deploy/crds.yaml
+++ b/deploy/crds.yaml
@@ -8,9 +8,17 @@ spec:
   - JSONPath: .status.releaseName
     name: Release
     type: string
+    description: ReleaseName is the name of the Helm release managed by the HelmRelease,
+      as given by Helm.
+  - JSONPath: .status.phase
+    name: Phase
+    type: string
+    description: Phase is the current release phase being performed for the HelmRelease.
   - JSONPath: .status.releaseStatus
     name: Status
     type: string
+    description: ReleaseStatus is the status of the Helm release managed by the HelmRelease,
+      as given by Helm.
   - JSONPath: .status.conditions[?(@.type=="Released")].message
     name: Message
     type: string
