--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
-mkdocs                  == 1.1
-mkdocs-material         == 4.6.3
+mkdocs                          == 1.1
+mkdocs-material                 == 4.6.3
 mkdocs-redirects
-pymdown-extensions      == 6.3.0
+mkdocs-markdownextradata-plugin == 0.1.3
+pymdown-extensions              == 6.3.0
