docs: embed Helm chart reference in documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
   - References:
     - Operator reference: references/operator.md
     - HelmRelease Custom Resource: references/helmrelease-custom-resource.md
+    - Helm chart: references/chart.md
   - HelmRelease guide:
     - Introduction: helmrelease-guide/introduction.md
     - Chart sources: helmrelease-guide/chart-sources.md
