--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Flux Helm Operator
 # site_description:
-site_author: Flux Project
+site_author: The Helm Operator contributors
 site_url: https://docs.fluxcd.io/projects/helm-operator/
 
 # Repository
