docs: add minimal monitoring reference

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
     - Operator reference: references/operator.md
     - HelmRelease Custom Resource: references/helmrelease-custom-resource.md
     - Helm chart: references/chart.md
+    - Monitoring: references/monitoring.md
   - HelmRelease guide:
     - Introduction: helmrelease-guide/introduction.md
     - Chart sources: helmrelease-guide/chart-sources.md
